feat(pagination): Upate Cursor-based pagination logic in persistance layer.